<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/text_edit"
        app:showAsAction="never"/>

    <!--<item-->
        <!--android:id="@+id/action_track_employee"-->
        <!--android:orderInCategory="100"-->
        <!--android:title="@string/text_track"-->
        <!--app:showAsAction="never"/>-->


    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/text_logout"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_record"
        android:orderInCategory="100"
        android:title="Mic"
        android:icon="@drawable/ic_mic_white"
        app:showAsAction="always"/>

</menu>