<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    tools:context="com.squareandcube.locationtracking.activity.ManagerLoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:background="@drawable/shape_linearlayout"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textColorHint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/managerId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:drawableEnd="@drawable/ic_perm_identity_white_24dp"
                android:drawableTint="@color/colorWhite"
                android:hint="@string/text_id"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="@dimen/dimen_10dp"
                android:paddingStart="0dp"
                android:textColor="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorWhite">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/managerPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorWhite"
                android:hint="@string/text_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_remember_me"
            android:textColor="@color/colorWhite"
            android:layout_marginStart="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/dimen_20dp"
            android:id="@+id/checkBoxRememberMe"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="@dimen/dimen_142dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:background="@drawable/shape_login_button"
            android:text="@string/text_login"
            android:textColor="@color/colorWhite" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:weightSum="2"
            android:orientation="horizontal">

            <!--<TextView-->
                <!--android:id="@+id/forgotpassword_textView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginEnd="@dimen/dimen_20dp"-->
                <!--android:text="@string/text_forgot_password"-->
                <!--android:layout_weight="1"-->
                <!--android:textColor="@color/colorWhite"-->
                <!--android:textSize="@dimen/dimen_12sp" />-->

            <TextView
                android:id="@+id/not_yet_registered_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/text_not_yet_register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_12sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
