<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorEmpListBG"
    tools:context="com.squareandcube.locationtracking.activity.ManagerRegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_20dp"
            android:layout_marginLeft="@dimen/dimen_20dp"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:layout_marginTop="40dp"
            android:background="#12050b26"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/managerid_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@null"
                android:drawableRight="@drawable/ic_perm_identity_white_24dp"
                android:hint="@string/text_id"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@null"
                android:drawableRight="@drawable/ic_perm_identity_white_24dp"
                android:hint="@string/text_name"
                android:inputType="text"
                android:maxLines="1"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@null"
                android:drawableEnd="@drawable/ic_mail_outline_white_24dp"
                android:hint="@string/text_email_id"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobile_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:background="@null"
                android:drawableRight="@drawable/ic_phone_android_white_24dp"
                android:hint="@string/text_mobile_no"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingBottom="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:paddingTop="@dimen/dimen_10dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColorHint="@color/colorWhite"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:background="@null"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/text_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColorHint="@color/colorWhite"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorWhite">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmpassword_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:background="@null"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/text_confirm_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </android.support.design.widget.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />


            <Button
                android:id="@+id/button_register"
                android:layout_width="@dimen/dimen_142dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:background="@drawable/shape_login_button"
                android:text="@string/text_register"
                android:textColor="@color/colorWhite" />


            <TextView
                android:id="@+id/textview_already_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/text_already_register"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_12sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>