<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorEmpListBG"
    tools:context="com.squareandcube.locationtracking.activity.EditManagerDetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_16dp"
            android:paddingTop="@dimen/dimen_16dp">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_16dp"
                android:layout_marginStart="@dimen/dimen_16dp"
                android:background="@color/colorConstraingLayoutBackground">


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/managerid_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_perm_identity_white_24dp"
                    android:enabled="false"
                    android:hint="@string/text_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/managerid_textInputEditText" />


                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@null"
                    android:cursorVisible="true"
                    android:drawableEnd="@drawable/ic_perm_identity_white_24dp"
                    android:enabled="false"
                    android:focusable="true"
                    android:hint="@string/text_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2" />

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_textInputEditText" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_mail_outline_white_24dp"
                    android:enabled="false"
                    android:hint="@string/text_email_id"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view5" />

                <View
                    android:id="@+id/view9"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/email_textInputEditText" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/mobile_textInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@null"
                    android:drawableEnd="@drawable/ic_phone_android_white_24dp"
                    android:enabled="false"
                    android:hint="@string/text_mobile_no"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:paddingEnd="@dimen/dimen_10dp"
                    android:paddingStart="0dp"
                    android:paddingTop="@dimen/dimen_10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view9" />

                <View
                    android:id="@+id/view10"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:layout_marginTop="@dimen/dimen_4dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mobile_textInputEditText" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="@null"
                    android:textColorHint="@color/colorWhite"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view10"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_textInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:backgroundTint="@color/colorWhite"
                        android:enabled="false"
                        android:hint="@string/text_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite" />
                </android.support.design.widget.TextInputLayout>


                <View
                    android:id="@+id/view11"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="@dimen/dimen_16dp"
                    android:layout_marginStart="@dimen/dimen_16dp"
                    android:background="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

                <Button
                    android:id="@+id/edit_button"
                    android:layout_width="@dimen/dimen_142dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dimen_24dp"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:background="@drawable/shape_login_button"
                    android:text="@string/text_edit"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view11" />

                <Button
                    android:id="@+id/update_button"
                    android:layout_width="@dimen/dimen_142dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/dimen_24dp"
                    android:layout_marginTop="@dimen/dimen_32dp"
                    android:background="@drawable/shape_login_button"
                    android:text="@string/text_update"
                    android:textColor="@color/colorWhite"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view11" />


            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

